cmake_minimum_required(VERSION 3.14)
project(c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__ main.cpp lengthOfLastWord.cpp lengthOfLastWord.h merge.cpp merge.h lengthOfLongestSubstring.cpp lengthOfLongestSubstring.h maximalSquare.cpp maximalSquare.h mincostTickets.cpp mincostTickets.h singleNumber.cpp singleNumber.h subarraySum.cpp subarraySum.h mySqrt.cpp mySqrt.h findOrder.cpp findOrder.h maxProduct.cpp maxProduct.h maxSubArray.cpp maxSubArray.h isValidBST.cpp isValidBST.h longestPalindrome.cpp longestPalindrome.h largestSumOfAverages.cpp largestSumOfAverages.h divisorGame.cpp divisorGame.h minCostToMoveChips.cpp minCostToMoveChips.h nextPermutation.cpp nextPermutation.h)